change engine key

--- a/LevelDBEngine/LevelDBEngine.csproj
+++ b/LevelDBEngine/LevelDBEngine.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="BsonHelper.cs" />
     <Compile Include="Engine.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
