done with LevelDBEngine, AzureTableEngine and MemoryDBEngine

--- a/LevelDBEngine/LevelDBEngine.csproj
+++ b/LevelDBEngine/LevelDBEngine.csproj
@@ -53,9 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BsonHelper.cs" />
     <Compile Include="Engine.cs" />
-    <Compile Include="JsonHelper.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
